--- a/src/pages/AuthPage/AuthPage.module.css
+++ b/src/pages/AuthPage/AuthPage.module.css
@@ -34,7 +34,7 @@
   margin: 0 auto;
   margin-bottom: 20px;
   max-width: 100px;
-  color: #000000;
+  color: white;
   cursor: pointer;
   display: block;
   position: relative;
@@ -43,7 +43,7 @@
   transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
 }
 .addContactBtn:hover {
-  color: #000;
+  color: white;
   background-color: transparent;
   text-shadow: nthree;
 }
