--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -6,12 +6,13 @@
 
 .contactItem {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
   margin-top: 10px;
 }
 
 .contactsName {
   display: flex;
+  margin-left: 15px;
   font-weight: bold;
   margin-right: 10px;
   color: white;
@@ -58,4 +59,35 @@
 
 .delBtn:active {
   background-color: white;
+}
+
+.remove {
+  color: red;
+  cursor: pointer;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.remove:hover {
+  transform: scale(1.2);
+}
+
+.call {
+  margin-left: auto;
+  color: green;
+  cursor: pointer;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.call:hover {
+  transform: scale(1.2);
+}
+
+.edit {
+  color: orange;
+  cursor: pointer;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.edit:hover {
+  transform: scale(1.2);
 }
