add auth from social

--- a/src/pages/AuthPage/AuthPage.module.css
+++ b/src/pages/AuthPage/AuthPage.module.css
@@ -69,3 +69,10 @@
 .addContactBtn:active {
   background-color: white;
 }
+
+.socialAuthWrapper {
+  margin: 25px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
